# mlipenv

./: .gitignore  README.md  mlip_server.py  pyproject.toml
mlipenv/: __main__.py  calculators.py  cli.py  client.py  manager.py  managers.py  mlip_opt.py  optimization_options.py  optimizers.py  options.py  runners.py  util.py
mlipenv/comm/: clients.py  enums.py  handlers.py  servers.py  util.py
mlipenv/comm/queuing/: job_palette.py  util.py
mlipenv/exec/: calculators.py  differentiation.py  manager.py  optimizers.py  options.py  runners.py  util.py
mlipenv/exec/enums/: output_enum.py
mlipenv/servers/: job_palette.py  node_comm.py  slurm_server.py  util.py
notebooks/: energy_configuration_builder.ipynb  optimization_configuration_builder.ipynb
servers/: git_server.py  node_comm.py
src/: calculators.py  energy_runners.py  managers.py  mlip_opt.py  optimization_options.py  optimization_runners.py  optimizers.py  runners.py  util.py
src/enums/: output_enum.py
test/: atoms.npz  coordinates.npz  energy.json  energy_config_template.json  energy_config_template.yaml  optimization_config_template.json  optimization_config_template.yaml  optimize.json
